common/src/main/java/com/example/common/error/ErrorModel.kt
package com.example.common.error

data class ErrorModel(val error: Error)